After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 720459 - evolution-rss fail to load with 3.8: Plugin "Evolution RSS" is missing a function named e_plugin_ui_init()
evolution-rss fail to load with 3.8: Plugin "Evolution RSS" is missing a func...
Status: RESOLVED FIXED
Product: evolution-rss
Classification: Other
Component: general
0.3.93
Other Linux
: Normal normal
: ---
Assigned To: evolution-rss-maint
evolution-rss-maint
: 695586 (view as bug list)
Depends on:
Blocks:
 
 
Reported: 2013-12-14 14:29 UTC by nicolas.vieville
Modified: 2014-03-12 12:04 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
[PATCH] fix deprecated soup functions (2.13 KB, patch)
2014-02-16 12:04 UTC, Igor Gnatenko
committed Details | Review
evolution-rss patch for rss_component_peek_base_directory() (1.79 KB, patch)
2014-03-03 14:01 UTC, Milan Crha
committed Details | Review

Description nicolas.vieville 2013-12-14 14:29:21 UTC
Hello,

After a late upgrade from F-18 to F-19, evolution-rss plugin that was perfectly working on F-18 (0.3.92-2) fails to load on F-19 (0.3.93-3).

Launching evolution from command line gives the messages below inserted in a lot of other ones:

(evolution:7934): libebackend-WARNING **: module_load: /usr/lib64/evolution/3.8/modules/evolution-module-rss.so: undefined symbol: em_folder_tree_set_selected
Failed to load module: /usr/lib64/evolution/3.8/modules/evolution-module-rss.so

(evolution:7934): evolution-plugin-lib-WARNING **: can't load plugin '/usr/lib64/evolution/3.8/plugins/liborg-gnome-evolution-rss.so': /usr/lib64/evolution/3.8/plugins/liborg-gnome-evolution-rss.so: undefined symbol: rss_component_peek_base_directory

(evolution:7934): evolution-plugin-lib-WARNING **: Cannot resolve symbol 'org_gnome_cooly_rss_startup' in plugin '/usr/lib64/evolution/3.8/plugins/liborg-gnome-evolution-rss.so' (not exported?)

(evolution:7934): evolution-plugin-lib-WARNING **: can't load plugin '/usr/lib64/evolution/3.8/plugins/liborg-gnome-evolution-rss.so': /usr/lib64/evolution/3.8/plugins/liborg-gnome-evolution-rss.so: undefined symbol: rss_component_peek_base_directory

(evolution:7934): libeutil-CRITICAL **: Plugin "Evolution RSS" is missing a function named e_plugin_ui_init()

While in evolution plugin window, trying to activate evolution-rss is never successful. 

Some other bug report have been submitted on others bugzillas for the same problem:

https://bugzilla.redhat.com/show_bug.cgi?id=1032649
http://bugs.debian.org/cgi-bin/bugreport.cgi?bug=726527

List of other packages installed on my laptop:

evolution-3.8.5-2.fc19.x86_64
evolution-data-server-3.8.5-6.fc19.x86_64
evolution-data-server-devel-3.8.5-6.fc19.x86_64
evolution-data-server-doc-3.8.5-6.fc19.noarch
evolution-devel-3.8.5-2.fc19.x86_64
evolution-help-3.8.5-2.fc19.noarch
evolution-perl-3.8.5-2.fc19.x86_64
evolution-pst-3.8.5-2.fc19.x86_64
evolution-rss-0.3.93-3.fc19.x86_64
syncevolution-1.3.99.3-1.fc19.x86_64
syncevolution-gtk-1.3.99.3-1.fc19.x86_64
syncevolution-libs-1.3.99.3-1.fc19.x86_64

None of these bug reports have a solution.

Hope you can do something to make this useful tool work. Feel free to ask me for more information, I'll try to provide it to you if my skill permit it.

Cordially,


-- 
NVieville
Comment 1 nicolas.vieville 2013-12-18 11:32:53 UTC
Hello,

Upgraded to F-20 with gnome-shell and evolution 3.10 and same problem persist:

(evolution:13094): libebackend-WARNING **: module_load: /usr/lib64/evolution/3.10/modules/evolution-module-rss.so: undefined symbol: em_folder_tree_set_selected
Failed to load module: /usr/lib64/evolution/3.10/modules/evolution-module-rss.so

(evolution:13094): evolution-plugin-lib-WARNING **: can't load plugin '/usr/lib64/evolution/3.10/plugins/liborg-gnome-evolution-rss.so': /usr/lib64/evolution/3.10/plugins/liborg-gnome-evolution-rss.so: undefined symbol: rss_component_peek_base_directory

(evolution:13094): evolution-util-CRITICAL **: Plugin "Evolution RSS" is missing a function named e_plugin_ui_init()

List of other packages installed on my laptop:

evolution.x86_64                    3.10.3-1.fc20 
evolution-data-server.x86_64        3.10.3-1.fc20 
evolution-data-server-devel.x86_64  3.10.3-1.fc20 
evolution-data-server-doc.noarch    3.10.3-1.fc20 
evolution-devel.x86_64              3.10.3-1.fc20 
evolution-help.noarch               3.10.3-1.fc20 
evolution-perl.x86_64               3.10.3-1.fc20 
evolution-pst.x86_64                3.10.3-1.fc20 
evolution-rss.x86_64                1:0.3.94-1.fc20
syncevolution.x86_64                1:1.3.99.3-7.fc20
syncevolution-gtk.x86_64            1:1.3.99.3-7.fc20
syncevolution-libs.x86_64           1:1.3.99.3-7.fc20

Cordially,


-- 
NVieville
Comment 2 erusan 2014-01-17 03:22:50 UTC
Possible workaround is a fresh install, or a reconfigure of all evolution-related packages? Perhaps the bug has to do with the deb package not installing properly.

I was having this problem, and today did a reinstall of testing. The plugin was enabled automatically after installation and is working wonderfully.

evolution 3.8.5-2+b1
evolution-rss 0.3.93-2

Mostly did just a default install, then restored evolution from a backup, and voila.
Comment 3 nicolas.vieville 2014-02-10 10:25:15 UTC
Hello,

Thank you for your suggestion. Sorry for the late response (need time to try it out).

Unfortunately even with a fresh user account and with evolution-3.10.3-1.fc20 and evolution-rss-0.3.94-1.fc20 reinstalled I get the same error messages I pointed out in my previous post.

Maybe a complete fresh install of the system is needed but as my laptop is a professional usage one, I need time to try to make the operation in a fresh VM.

Cordially,


-- 
NVieville
Comment 4 Igor Gnatenko 2014-02-16 11:20:35 UTC
I have this bug.
Comment 5 Igor Gnatenko 2014-02-16 12:04:48 UTC
Created attachment 269293 [details] [review]
[PATCH] fix deprecated soup functions

Just fixed it
Comment 6 Milan Crha 2014-03-03 14:01:51 UTC
Created attachment 270803 [details] [review]
evolution-rss patch for rss_component_peek_base_directory()

This fixes the missing rss_component_peek_base_directory(), the problem was not in installation, but in the code itself, where the related function (the source file where it was defined) was not compiled into the plugin library.

This is only an addition to Igor's patch.
Comment 7 Dominique Leuenberger 2014-03-05 19:26:37 UTC
These two patches work for me; as a side-effect, it also fixes
https://bugzilla.gnome.org/show_bug.cgi?id=695586
Comment 8 Igor Gnatenko 2014-03-05 19:29:41 UTC
(In reply to comment #7)
> These two patches work for me; as a side-effect, it also fixes
> https://bugzilla.gnome.org/show_bug.cgi?id=695586
Thank you for testing. So I close that bug as duplicate.
Comment 9 Igor Gnatenko 2014-03-05 19:30:19 UTC
Oh. I can't do this. Sadly:(
Comment 10 Dominique Leuenberger 2014-03-05 19:33:30 UTC
*** Bug 695586 has been marked as a duplicate of this bug. ***
Comment 11 Dominique Leuenberger 2014-03-07 23:04:30 UTC
Comment on attachment 269293 [details] [review]
[PATCH] fix deprecated soup functions

Patch was commited as
https://git.gnome.org/browse/evolution-rss/commit/?id=6a1bc452b329acfe75b487b214f664848282fe25
Comment 12 Dominique Leuenberger 2014-03-07 23:05:02 UTC
Comment on attachment 270803 [details] [review]
evolution-rss patch for rss_component_peek_base_directory()

Patch was commited as https://git.gnome.org/browse/evolution-rss/commit/?id=07128e0eb85b47afbf1a3616d559638d6a97b4ce
Comment 13 Dominique Leuenberger 2014-03-07 23:05:19 UTC
This problem has been fixed in the development version. The fix will be available in the next major software release. Thank you for your bug report.
Comment 14 nicolas.vieville 2014-03-12 10:23:21 UTC
Hello,

After rebuilding locally evolution-rss package for Fedora 20 x86_64 including the two patches provided above, and installing this new package, evolution-rss plugin seems to load correctly.

The only noticeable message displayed while launching evolution from a console is:


(evolution:12185): libebackend-WARNING **: module_load: /usr/lib64/evolution/3.10/modules/evolution-module-rss.so: undefined symbol: em_folder_tree_set_selected
Failed to load module: /usr/lib64/evolution/3.10/modules/evolution-module-rss.so

Now that evolution-rss launches itself, I re-imported my usual feeds, but unfortunately I cannot see these feeds in evolution. Whatever the choice I make for the HTML renderer in the plugin settings (Webkit or GtkHTML) or the type of feeds (RSS 2.0 or ATOM 1.0) none of the feeds are displayed in evolution. 
The configure process was launched with:

./configure --with-primary-render=webkit --prefix=/usr

Should I open a new bug report for that, or could it be considered as the following issue of this bug report?

Thanks for your work on this.

Cordially,


-- 
NVieville
Comment 15 Igor Gnatenko 2014-03-12 11:20:34 UTC
(In reply to comment #14)
> Hello,
> 
> Should I open a new bug report for that, or could it be considered as the
> following issue of this bug report?
Hi,

Yes. Please open new BZ.
Comment 16 Igor Gnatenko 2014-03-12 11:51:12 UTC
I've opened bug #726169 for you issue.
Comment 17 nicolas.vieville 2014-03-12 12:04:38 UTC
Thank you very much!

Cordially,


-- 
NVieville