fix deprecated soup functions

Reference: https://bugzilla.gnome.org/show_bug.cgi?id=720459
Signed-off-by: Igor Gnatenko <i.gnatenko.brain@gmail.com>